--- a/1.html
+++ b/1.html
@@ -3,39 +3,22 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>HTML</h2>
-  <p><a href="https://en.wikipedia.org/wiki/HTML" target="_blank" title="html5 speicification"> Hypertext Markup Language</a> (HTML) is the standard markup language for <strong>creating <u>web</u> pages</<strong> and web applications.
-  </p>
-  <img src="coco.jpg" width="80%">
-  <p>The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.</p>
-  <p><div id="disqus_thread"></div>
-<script>
-    /**
-    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
-    var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    };
-    */
-    (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = 'https://web1-bb4zcxemda.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
-    })();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
+    <div id="article">
+      <h2>HTML</h2>
+      <p><a href="https://en.wikipedia.org/wiki/HTML" target="_blank" title="html5 speicification"> Hypertext Markup Language</a> (HTML) is the standard markup language for <strong>creating <u>web</u> pages</<strong> and web applications.
+      </p>
+      <p>The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.</p>
+    </div>
+  </div>
 </body>
 </html>
